# yuv2rgb

./: CMakeLists.txt  README.md  test_yuv_rgb.c  yuv_rgb.c
data/: test1.yuv
